--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <header>
       <div class="logo">
-        <img src="/image/logo.svg" alt="Logo">
+        <img src="/image/1.gif" alt="Logo">
       </div>
       <nav class="desktop-nav">
         <ul>
