--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
     <footer>
       <div class="footer-container">
         <div class="footer-logo">
-          <img src="/image/logo1.svg" alt="Logo">
+          <img src="image/logo.svg" alt="Logo">
           <p data-translate="designed_with_love">Designed with ❤️</p>
           <div class="social-icons">
             <a href="#" target="_blank" class="social-icon">
@@ -512,7 +512,7 @@
 
     <footer class="mobile-footer">
       <div class="footer-logo-mobile">
-        <img src="/image/logo1.svg" alt="Logo">
+        <img src="image/logo.svg" alt="Logo">
         <p data-translate="designed_with_love">Designed with ❤️</p>
       </div>
 
